<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="uiStatus_XPGamePad" Id="{b6feb1c5-5b0b-49df-b76b-293523cb9789}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE uiStatus_XPGamePad :
(
	Disable,
	Ready,
	RotationC,
	MovingDpad,
	CantRotationC
) UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>